Fixed editor overlap issues & responsiveness.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,7 +44,7 @@
 
 /* Create New Update - Editor */
 
-.mdl-cell.editor-section-main-box {
+.editor-section-main-box {
   height: 350px;
 }
 
@@ -56,7 +56,7 @@
 .mdl-cell.editor-section-img-box {
   position: relative;
   display: inline-block;
-  height: 100%;
+  height: 350px;
   min-width: 300px;
 }
 
@@ -74,7 +74,7 @@
   position: relative;
   display: inline-block;
   vertical-align:top;
-  height: 100%;
+  height: 350px;
 }
 
 .editor-section-title {
